# src/app.ts
@@ -9,6 +9,7 @@ import { TreatmentError } from './middleware/treatment-error';
 import { AccountRouters } from './modules/account/account.routers';
 import { authUser } from './modules/auth/auth.routers';
 import { RoleRouters } from './modules/role/role.routers';
+import { PermissionRouters } from './modules/permission/permission.routers';
 
 export class App {
   public server: express.Application = express();
@@ -43,6 +44,7 @@ export class App {
     this.server.use(authUser)
     this.server.use('/role', RoleRouters)
     this.server.use('/account', AccountRouters)
+    this.server.use('/permission', PermissionRouters)
     /*
     * Middleware de tratamento de erro
     ! Deixar sempre como a ultima rota 
